# sftp_data_provider

./: .devcontainer.json  .gitignore  Dockerfile  README.md  data_loading_functions.py  design.md  labbook.ipynb  module_loading_functions.py  pyproject.toml  sftp_data_blogpost.ipynb  tests.py
docker/: Dockerfile
pics/: generate_mermaid_svg.py  package-lock.json  seq_diag_module.md  seq_diag_system.md
sftp_docs/: Main design.md
sftp_docs/functional/: UC1 - Make data available.md  UC2 - distribute data to the students.md
sftp_docs/technical/: A dataloading system using plugins of getters and loaders make it very easy to create new getters.md  Abstracting the dataloading code away on the SFTP server improves security.md  An SFTP server is an efficient way to safely distribute data.md  Functioneel programmeren is een goede optie voor het schrijven van getters.md  Getter functions should be stored outside the main codebase as configurable plugins.md  SFTP account decides which data is available to the students.md  Storing SFTP credentials in a seperate config file improves security.md  Using virtual roots we can serve only the right data to a particular group of students.md
src/sftp_data_provider/: __init__.py  data_loading_functions.py  module_loading_functions.py
